--- a/config.h.in
+++ b/config.h.in
@@ -1,172 +1,217 @@
-/* config.h.in.  Generated automatically from configure.in by autoheader 2.13.  */
+/* config.h.in.  Generated from configure.in by autoheader.  */
 
-/* Define to empty if the keyword does not work.  */
-#undef const
-
-/* Define to `unsigned' if <sys/types.h> doesn't define.  */
-#undef size_t
-
-/* Define if you have the ANSI C header files.  */
-#undef STDC_HEADERS
-
-#undef MD5_CRYPT
-#undef HOST
+/* BSD system */
 #undef BSDHOST
-#undef FREEBSDHOST
-#undef NETBSDHOST
 
-/* Define if you have the closelog function.  */
+/* FreeBSD system */
+#undef FREEBSDHOST
+
+/* Define to 1 if you have the `closelog' function. */
 #undef HAVE_CLOSELOG
 
-/* Define if you have the dbm_close function.  */
-#undef HAVE_DBM_CLOSE
-
-/* Define if you have the dbm_fetch function.  */
-#undef HAVE_DBM_FETCH
-
-/* Define if you have the dbm_open function.  */
-#undef HAVE_DBM_OPEN
-
-/* Define if you have the dbm_store function.  */
-#undef HAVE_DBM_STORE
-
-/* Define if you have the free function.  */
-#undef HAVE_FREE
-
-/* Define if you have the getdomainname function.  */
-#undef HAVE_GETDOMAINNAME
-
-/* Define if you have the gethostname function.  */
-#undef HAVE_GETHOSTNAME
-
-/* Define if you have the getuid function.  */
-#undef HAVE_GETUID
-
-/* Define if you have the malloc function.  */
-#undef HAVE_MALLOC
-
-/* Define if you have the openlog function.  */
-#undef HAVE_OPENLOG
-
-/* Define if you have the realloc function.  */
-#undef HAVE_REALLOC
-
-/* Define if you have the setreuid function.  */
-#undef HAVE_SETREUID
-
-/* Define if you have the setuid function.  */
-#undef HAVE_SETUID
-
-/* Define if you have the strdup function.  */
-#undef HAVE_STRDUP
-
-/* Define if you have the strerror function.  */
-#undef HAVE_STRERROR
-
-/* Define if you have the strncat function.  */
-#undef HAVE_STRNCAT
-
-/* Define if you have the strncpy function.  */
-#undef HAVE_STRNCPY
-
-/* Define if you have the strstr function.  */
-#undef HAVE_STRSTR
-
-/* Define if you have the sysinfo function.  */
-#undef HAVE_SYSINFO
-
-/* Define if you have the syslog function.  */
-#undef HAVE_SYSLOG
-
-/* Define if you have the unsetenv function.  */
-#undef HAVE_UNSETENV
-
-/* Define if you have the va_end function.  */
-#undef HAVE_VA_END
-
-/* Define if you have the va_start function.  */
-#undef HAVE_VA_START
-
-/* Define if you have the vsnprintf function.  */
-#undef HAVE_VSNPRINTF
-
-/* Define if you have the <crack.h> header file.  */
+/* Define to 1 if you have the <crack.h> header file. */
 #undef HAVE_CRACK_H
 
-/* Define if you have the <crypt.h> header file.  */
+/* Define to 1 if you have the <crypt.h> header file. */
 #undef HAVE_CRYPT_H
 
-/* Define if you have the <db1/ndbm.h> header file.  */
+/* Define to 1 if you have the <db1/ndbm.h> header file. */
 #undef HAVE_DB1_NDBM_H
 
-/* Define if you have the <errno.h> header file.  */
+/* Define to 1 if you have the `dbm_close' function. */
+#undef HAVE_DBM_CLOSE
+
+/* Define to 1 if you have the `dbm_fetch' function. */
+#undef HAVE_DBM_FETCH
+
+/* Define to 1 if you have the `dbm_open' function. */
+#undef HAVE_DBM_OPEN
+
+/* Define to 1 if you have the `dbm_store' function. */
+#undef HAVE_DBM_STORE
+
+/* db4 with hsearch */
+#undef HAVE_DB_H_DB_DBM_HSEARCH
+
+/* Define to 1 if you have the <errno.h> header file. */
 #undef HAVE_ERRNO_H
 
-/* Define if you have the <fcntl.h> header file.  */
+/* Define to 1 if you have the <fcntl.h> header file. */
 #undef HAVE_FCNTL_H
 
-/* Define if you have the <gdbm-ndbm.h> header file.  */
+/* Define to 1 if you have the `free' function. */
+#undef HAVE_FREE
+
+/* Define to 1 if you have the <gdbm-ndbm.h> header file. */
 #undef HAVE_GDBM_NDBM_H
 
-/* Define if you have the <malloc.h> header file.  */
-#undef HAVE_MALLOC_H
+/* Define to 1 if you have the `getdomainname' function. */
+#undef HAVE_GETDOMAINNAME
 
-/* Define if you have the <ndbm.h> header file.  */
-#undef HAVE_NDBM_H
+/* Define to 1 if you have the `gethostname' function. */
+#undef HAVE_GETHOSTNAME
 
-/* Define if you have the <pwd.h> header file.  */
-#undef HAVE_PWD_H
+/* Define to 1 if you have the `getuid' function. */
+#undef HAVE_GETUID
 
-/* Define if you have the <security/pam_appl.h> header file.  */
-#undef HAVE_SECURITY_PAM_APPL_H
+/* Define to 1 if you have the <inttypes.h> header file. */
+#undef HAVE_INTTYPES_H
 
-/* Define if you have the <shadow.h> header file.  */
-#undef HAVE_SHADOW_H
-
-/* Define if you have the <stdarg.h> header file.  */
-#undef HAVE_STDARG_H
-
-/* Define if you have the <stdio.h> header file.  */
-#undef HAVE_STDIO_H
-
-/* Define if you have the <stdlib.h> header file.  */
-#undef HAVE_STDLIB_H
-
-/* Define if you have the <string.h> header file.  */
-#undef HAVE_STRING_H
-
-/* Define if you have the <sys/stat.h> header file.  */
-#undef HAVE_SYS_STAT_H
-
-/* Define if you have the <sys/systeminfo.h> header file.  */
-#undef HAVE_SYS_SYSTEMINFO_H
-
-/* Define if you have the <sys/time.h> header file.  */
-#undef HAVE_SYS_TIME_H
-
-/* Define if you have the <syslog.h> header file.  */
-#undef HAVE_SYSLOG_H
-
-/* Define if you have the <unistd.h> header file.  */
-#undef HAVE_UNISTD_H
-
-/* Define if you have the crack library (-lcrack).  */
+/* Define to 1 if you have the `crack' library (-lcrack). */
 #undef HAVE_LIBCRACK
 
-/* Define if you have the crypt library (-lcrypt).  */
+/* Define to 1 if you have the `crypt' library (-lcrypt). */
 #undef HAVE_LIBCRYPT
 
-/* Define if you have the db library (-ldb).  */
+/* Define to 1 if you have the `db' library (-ldb). */
 #undef HAVE_LIBDB
 
-/* Define if you have the db1 library (-ldb1).  */
+/* Define to 1 if you have the `db1' library (-ldb1). */
 #undef HAVE_LIBDB1
 
-/* Define if you have the gdbm library (-lgdbm).  */
+/* Define to 1 if you have the `gdbm' library (-lgdbm). */
 #undef HAVE_LIBGDBM
 
-/* Define if you have the ndbm library (-lndbm).  */
+/* Define to 1 if you have the `ndbm' library (-lndbm). */
 #undef HAVE_LIBNDBM
 
-/* Define if you have the pam library (-lpam).  */
+/* Define to 1 if you have the `pam' library (-lpam). */
 #undef HAVE_LIBPAM
+
+/* Define to 1 if you have the `malloc' function. */
+#undef HAVE_MALLOC
+
+/* Define to 1 if you have the <malloc.h> header file. */
+#undef HAVE_MALLOC_H
+
+/* Define to 1 if you have the <memory.h> header file. */
+#undef HAVE_MEMORY_H
+
+/* Define to 1 if you have the <ndbm.h> header file. */
+#undef HAVE_NDBM_H
+
+/* Define to 1 if you have the `openlog' function. */
+#undef HAVE_OPENLOG
+
+/* Define to 1 if you have the <pwd.h> header file. */
+#undef HAVE_PWD_H
+
+/* Define to 1 if you have the `realloc' function. */
+#undef HAVE_REALLOC
+
+/* Define to 1 if you have the <security/pam_appl.h> header file. */
+#undef HAVE_SECURITY_PAM_APPL_H
+
+/* Define to 1 if you have the `setreuid' function. */
+#undef HAVE_SETREUID
+
+/* Define to 1 if you have the `setuid' function. */
+#undef HAVE_SETUID
+
+/* Define to 1 if you have the <shadow.h> header file. */
+#undef HAVE_SHADOW_H
+
+/* Define to 1 if you have the <stdarg.h> header file. */
+#undef HAVE_STDARG_H
+
+/* Define to 1 if you have the <stdint.h> header file. */
+#undef HAVE_STDINT_H
+
+/* Define to 1 if you have the <stdio.h> header file. */
+#undef HAVE_STDIO_H
+
+/* Define to 1 if you have the <stdlib.h> header file. */
+#undef HAVE_STDLIB_H
+
+/* Define to 1 if you have the `strdup' function. */
+#undef HAVE_STRDUP
+
+/* Define to 1 if you have the `strerror' function. */
+#undef HAVE_STRERROR
+
+/* Define to 1 if you have the <strings.h> header file. */
+#undef HAVE_STRINGS_H
+
+/* Define to 1 if you have the <string.h> header file. */
+#undef HAVE_STRING_H
+
+/* Define to 1 if you have the `strncat' function. */
+#undef HAVE_STRNCAT
+
+/* Define to 1 if you have the `strncpy' function. */
+#undef HAVE_STRNCPY
+
+/* Define to 1 if you have the `strstr' function. */
+#undef HAVE_STRSTR
+
+/* Define to 1 if you have the `sysinfo' function. */
+#undef HAVE_SYSINFO
+
+/* Define to 1 if you have the `syslog' function. */
+#undef HAVE_SYSLOG
+
+/* Define to 1 if you have the <syslog.h> header file. */
+#undef HAVE_SYSLOG_H
+
+/* Define to 1 if you have the <sys/stat.h> header file. */
+#undef HAVE_SYS_STAT_H
+
+/* Define to 1 if you have the <sys/systeminfo.h> header file. */
+#undef HAVE_SYS_SYSTEMINFO_H
+
+/* Define to 1 if you have the <sys/time.h> header file. */
+#undef HAVE_SYS_TIME_H
+
+/* Define to 1 if you have the <sys/types.h> header file. */
+#undef HAVE_SYS_TYPES_H
+
+/* Define to 1 if you have the <unistd.h> header file. */
+#undef HAVE_UNISTD_H
+
+/* Define to 1 if you have the `unsetenv' function. */
+#undef HAVE_UNSETENV
+
+/* Define to 1 if you have the `va_end' function. */
+#undef HAVE_VA_END
+
+/* Define to 1 if you have the `va_start' function. */
+#undef HAVE_VA_START
+
+/* Define to 1 if you have the `vsnprintf' function. */
+#undef HAVE_VSNPRINTF
+
+/* system host */
+#undef HOST
+
+/* md5 crypt functions required */
+#undef MD5_CRYPT
+
+/* NetBSD system */
+#undef NETBSDHOST
+
+/* Define to the address where bug reports for this package should be sent. */
+#undef PACKAGE_BUGREPORT
+
+/* Define to the full name of this package. */
+#undef PACKAGE_NAME
+
+/* Define to the full name and version of this package. */
+#undef PACKAGE_STRING
+
+/* Define to the one symbol short name of this package. */
+#undef PACKAGE_TARNAME
+
+/* Define to the version of this package. */
+#undef PACKAGE_VERSION
+
+/* Define to 1 if you have the ANSI C header files. */
+#undef STDC_HEADERS
+
+/* Define to 1 if you can safely include both <sys/time.h> and <time.h>. */
+#undef TIME_WITH_SYS_TIME
+
+/* Define to empty if `const' does not conform to ANSI C. */
+#undef const
+
+/* Define to `unsigned' if <sys/types.h> does not define. */
+#undef size_t
