--- a/configure.in
+++ b/configure.in
@@ -7,6 +7,7 @@ AC_SUBST(ARG)
 AC_SUBST(NEED_COMPAT_H)
 dnl AC_SUBST(AC_LIBOBJ)
 
+AC_CANONICAL_SYSTEM
 AC_SUBST(host)
 AC_DEFINE_UNQUOTED(HOST,"$host",system host)
 
