--- a/config.h.in
+++ b/config.h.in
@@ -132,6 +132,9 @@
 /* Define to 1 if you have the <security/pam_appl.h> header file. */
 #undef HAVE_SECURITY_PAM_APPL_H
 
+/* Define to 1 if you have the `setenv' function. */
+#undef HAVE_SETENV
+
 /* Define to 1 if you have the `setreuid' function. */
 #undef HAVE_SETREUID
 
