--- a/configure.in
+++ b/configure.in
@@ -317,6 +317,7 @@ dnl Checks for library functions.
 
 AC_CHECK_FUNCS(free realloc strdup strerror strstr strcasecmp strncasecmp strrchr strchr strnchr va_start va_end vsnprintf strncat strncpy openlog syslog closelog setuid setreuid getuid getspnam gettimeofday memset)
 AC_CHECK_FUNCS(unsetenv,,NEED_COMPAT_H="yes")
+AC_CHECK_FUNCS(setenv,,NEED_COMPAT_H="yes")
 
 AC_CHECK_FUNCS(getdomainname,,NO_GETDOMAINNAME=yes)
 AC_FUNC_CHOWN
