solaris support added

--- a/examples/vacation_cgi/cgipaf.conf
+++ b/examples/vacation_cgi/cgipaf.conf
@@ -104,8 +104,8 @@ login_document          viewmailcfg.php
 
 mailcfg_check		off
 
-run_viewmailcfg		/etc/cgipaf/scripts/mailcfg.pl	"%{poststring}\n"
-run_mailcfg		"/etc/cgipaf/scripts/mailcfg.pl update %{domain}"	"%{poststring}\n"
+run_viewmailcfg		/etc/cgipaf/scripts/mailcfg.pl	"%{poststring}"
+run_mailcfg		"/etc/cgipaf/scripts/mailcfg.pl update %{domain}"	"%{poststring}"
 
 mailcfg_document        mailcfg.php.php
 error_readname		mailcfg_errreadname.php
