--- a/config.h.in
+++ b/config.h.in
@@ -1,312 +1,503 @@
 /* config.h.in.  Generated from configure.in by autoheader.  */
 
-/* BSD system */
+/* 
+   BSD system */
 #undef BSDHOST
 
-/* FreeBSD system */
+/* 
+   FreeBSD system */
 #undef FREEBSDHOST
 
-/* Define to 1 if your system has a working `chown' function. */
+/* 
+   Define to 1 if your system has a
+   working `chown' function. */
 #undef HAVE_CHOWN
 
-/* Define to 1 if you have the `closelog' function. */
+/* 
+   Define to 1 if you have the `closelog'
+   function. */
 #undef HAVE_CLOSELOG
 
-/* Define to 1 if you have the <crack.h> header file. */
+/* 
+   Define to 1 if you have the <crack.h>
+   header file. */
 #undef HAVE_CRACK_H
 
-/* Define to 1 if you have the <crypt.h> header file. */
+/* 
+   Define to 1 if you have the <crypt.h>
+   header file. */
 #undef HAVE_CRYPT_H
 
-/* Define to 1 if you have the <db1/ndbm.h> header file. */
+/* 
+   Define to 1 if you have the <db1/ndbm.h>
+   header file. */
 #undef HAVE_DB1_NDBM_H
 
-/* Define to 1 if you have the `dbm_close' function. */
+/* 
+   Define to 1 if you have the `dbm_close'
+   function. */
 #undef HAVE_DBM_CLOSE
 
-/* Define to 1 if you have the `dbm_fetch' function. */
+/* 
+   Define to 1 if you have the `dbm_fetch'
+   function. */
 #undef HAVE_DBM_FETCH
 
-/* Define to 1 if you have the `dbm_open' function. */
+/* 
+   Define to 1 if you have the `dbm_open'
+   function. */
 #undef HAVE_DBM_OPEN
 
-/* Define to 1 if you have the `dbm_store' function. */
+/* 
+   Define to 1 if you have the `dbm_store'
+   function. */
 #undef HAVE_DBM_STORE
 
-/* Define to 1 if you have the <db.h> header file. */
+/* 
+   Define to 1 if you have the <db.h>
+   header file. */
 #undef HAVE_DB_H
 
-/* db4 with hsearch */
+/* 
+   db4 with hsearch */
 #undef HAVE_DB_H_DB_DBM_HSEARCH
 
-/* Define to 1 if you don't have `vprintf' but do have `_doprnt.' */
+/* 
+   Define to 1 if you don't have `vprintf'
+   but do have `_doprnt.' */
 #undef HAVE_DOPRNT
 
-/* Define to 1 if you have the <errno.h> header file. */
+/* 
+   Define to 1 if you have the <errno.h>
+   header file. */
 #undef HAVE_ERRNO_H
 
-/* Define to 1 if you have the <fcntl.h> header file. */
+/* 
+   Define to 1 if you have the <fcntl.h>
+   header file. */
 #undef HAVE_FCNTL_H
 
-/* Define to 1 if you have the `fork' function. */
+/* 
+   Define to 1 if you have the `fork'
+   function. */
 #undef HAVE_FORK
 
-/* Define to 1 if you have the `free' function. */
+/* 
+   Define to 1 if you have the `free'
+   function. */
 #undef HAVE_FREE
 
-/* Define to 1 if you have the <gdbm-ndbm.h> header file. */
+/* 
+   Define to 1 if you have the <gdbm-ndbm.h>
+   header file. */
 #undef HAVE_GDBM_NDBM_H
 
-/* Define to 1 if you have the `getdomainname' function. */
+/* 
+   Define to 1 if you have the `getdomainname'
+   function. */
 #undef HAVE_GETDOMAINNAME
 
-/* Define to 1 if you have the `gethostname' function. */
+/* 
+   Define to 1 if you have the `gethostname'
+   function. */
 #undef HAVE_GETHOSTNAME
 
-/* Define to 1 if you have the `getspnam' function. */
+/* 
+   Define to 1 if you have the `getspnam'
+   function. */
 #undef HAVE_GETSPNAM
 
-/* Define to 1 if you have the `gettimeofday' function. */
+/* 
+   Define to 1 if you have the `gettimeofday'
+   function. */
 #undef HAVE_GETTIMEOFDAY
 
-/* Define to 1 if you have the `getuid' function. */
+/* 
+   Define to 1 if you have the `getuid'
+   function. */
 #undef HAVE_GETUID
 
-/* Define to 1 if you have the <inttypes.h> header file. */
+/* 
+   Define to 1 if you have the <inttypes.h>
+   header file. */
 #undef HAVE_INTTYPES_H
 
-/* Define to 1 if you have the `crack' library (-lcrack). */
+/* 
+   Define to 1 if you have the `crack'
+   library (-lcrack). */
 #undef HAVE_LIBCRACK
 
-/* Define to 1 if you have the `crypt' library (-lcrypt). */
+/* 
+   Define to 1 if you have the `crypt'
+   library (-lcrypt). */
 #undef HAVE_LIBCRYPT
 
-/* Define to 1 if you have the `db' library (-ldb). */
+/* 
+   Define to 1 if you have the `db'
+   library (-ldb). */
 #undef HAVE_LIBDB
 
-/* Define to 1 if you have the `db1' library (-ldb1). */
+/* 
+   Define to 1 if you have the `db1'
+   library (-ldb1). */
 #undef HAVE_LIBDB1
 
-/* Define to 1 if you have the `gdbm' library (-lgdbm). */
+/* 
+   Define to 1 if you have the `gdbm'
+   library (-lgdbm). */
 #undef HAVE_LIBGDBM
 
-/* Define to 1 if you have the `gdbm_compat' library (-lgdbm_compat). */
+/* 
+   Define to 1 if you have the `gdbm_compat'
+   library (-lgdbm_compat). */
 #undef HAVE_LIBGDBM_COMPAT
 
-/* Define to 1 if you have the `ndbm' library (-lndbm). */
+/* 
+   Define to 1 if you have the `ndbm'
+   library (-lndbm). */
 #undef HAVE_LIBNDBM
 
-/* Define to 1 if you have the `pam' library (-lpam). */
+/* 
+   Define to 1 if you have the `pam'
+   library (-lpam). */
 #undef HAVE_LIBPAM
 
-/* Define to 1 if `lstat' has the bug that it succeeds when given the
-   zero-length file name argument. */
+/* 
+   Define to 1 if `lstat' has the bug
+   that it succeeds when given the zero-length file name
+   argument. */
 #undef HAVE_LSTAT_EMPTY_STRING_BUG
 
-/* Define to 1 if your system has a GNU libc compatible `malloc' function, and
-   to 0 otherwise. */
+/* 
+   Define to 1 if your system has a
+   GNU libc compatible `malloc' function, and to 0 otherwise.
+   */
 #undef HAVE_MALLOC
 
-/* Define to 1 if you have the <malloc.h> header file. */
+/* 
+   Define to 1 if you have the <malloc.h>
+   header file. */
 #undef HAVE_MALLOC_H
 
-/* Define to 1 if you have the <memory.h> header file. */
+/* 
+   Define to 1 if you have the <memory.h>
+   header file. */
 #undef HAVE_MEMORY_H
 
-/* Define to 1 if you have the `memset' function. */
+/* 
+   Define to 1 if you have the `memset'
+   function. */
 #undef HAVE_MEMSET
 
-/* Define to 1 if you have the <ndbm.h> header file. */
+/* 
+   Define to 1 if you have the <ndbm.h>
+   header file. */
 #undef HAVE_NDBM_H
 
-/* Define to 1 if you have the `openlog' function. */
+/* 
+   Define to 1 if you have the `openlog'
+   function. */
 #undef HAVE_OPENLOG
 
-/* Define to 1 if you have the <pwd.h> header file. */
+/* 
+   Define to 1 if you have the <pwd.h>
+   header file. */
 #undef HAVE_PWD_H
 
-/* Define to 1 if your system has a GNU libc compatible `realloc' function,
-   and to 0 otherwise. */
+/* 
+   Define to 1 if your system has a
+   GNU libc compatible `realloc' function, and to 0 otherwise.
+   */
 #undef HAVE_REALLOC
 
-/* Define to 1 if you have the <security/pam_appl.h> header file. */
+/* 
+   Define to 1 if you have the <security/pam_appl.h>
+   header file. */
 #undef HAVE_SECURITY_PAM_APPL_H
 
-/* Define to 1 if you have the `setenv' function. */
+/* 
+   Define to 1 if you have the `setenv'
+   function. */
 #undef HAVE_SETENV
 
-/* Define to 1 if you have the `setreuid' function. */
+/* 
+   Define to 1 if you have the `setreuid'
+   function. */
 #undef HAVE_SETREUID
 
-/* Define to 1 if you have the `setuid' function. */
+/* 
+   Define to 1 if you have the `setuid'
+   function. */
 #undef HAVE_SETUID
 
-/* Define to 1 if you have the <shadow.h> header file. */
+/* 
+   Define to 1 if you have the <shadow.h>
+   header file. */
 #undef HAVE_SHADOW_H
 
-/* Define to 1 if `stat' has the bug that it succeeds when given the
-   zero-length file name argument. */
+/* 
+   Define to 1 if `stat' has the bug
+   that it succeeds when given the zero-length file name
+   argument. */
 #undef HAVE_STAT_EMPTY_STRING_BUG
 
-/* Define to 1 if you have the <stdarg.h> header file. */
+/* 
+   Define to 1 if you have the <stdarg.h>
+   header file. */
 #undef HAVE_STDARG_H
 
-/* Define to 1 if you have the <stdint.h> header file. */
+/* 
+   Define to 1 if you have the <stdint.h>
+   header file. */
 #undef HAVE_STDINT_H
 
-/* Define to 1 if you have the <stdio.h> header file. */
+/* 
+   Define to 1 if you have the <stdio.h>
+   header file. */
 #undef HAVE_STDIO_H
 
-/* Define to 1 if you have the <stdlib.h> header file. */
+/* 
+   Define to 1 if you have the <stdlib.h>
+   header file. */
 #undef HAVE_STDLIB_H
 
-/* Define to 1 if you have the `strcasecmp' function. */
+/* 
+   Define to 1 if you have the `strcasecmp'
+   function. */
 #undef HAVE_STRCASECMP
 
-/* Define to 1 if you have the `strchr' function. */
+/* 
+   Define to 1 if you have the `strchr'
+   function. */
 #undef HAVE_STRCHR
 
-/* Define to 1 if you have the `strdup' function. */
+/* 
+   Define to 1 if you have the `strdup'
+   function. */
 #undef HAVE_STRDUP
 
-/* Define to 1 if you have the `strerror' function. */
+/* 
+   Define to 1 if you have the `strerror'
+   function. */
 #undef HAVE_STRERROR
 
-/* Define to 1 if you have the <strings.h> header file. */
+/* 
+   Define to 1 if you have the <strings.h>
+   header file. */
 #undef HAVE_STRINGS_H
 
-/* Define to 1 if you have the <string.h> header file. */
+/* 
+   Define to 1 if you have the <string.h>
+   header file. */
 #undef HAVE_STRING_H
 
-/* Define to 1 if you have the `strncasecmp' function. */
+/* 
+   Define to 1 if you have the `strncasecmp'
+   function. */
 #undef HAVE_STRNCASECMP
 
-/* Define to 1 if you have the `strncat' function. */
+/* 
+   Define to 1 if you have the `strncat'
+   function. */
 #undef HAVE_STRNCAT
 
-/* Define to 1 if you have the `strnchr' function. */
+/* 
+   Define to 1 if you have the `strnchr'
+   function. */
 #undef HAVE_STRNCHR
 
-/* Define to 1 if you have the `strncpy' function. */
+/* 
+   Define to 1 if you have the `strncpy'
+   function. */
 #undef HAVE_STRNCPY
 
-/* Define to 1 if you have the `strrchr' function. */
+/* 
+   Define to 1 if you have the `strrchr'
+   function. */
 #undef HAVE_STRRCHR
 
-/* Define to 1 if you have the `strstr' function. */
+/* 
+   Define to 1 if you have the `strstr'
+   function. */
 #undef HAVE_STRSTR
 
-/* Define to 1 if you have the `sysinfo' function. */
+/* 
+   Define to 1 if you have the `sysinfo'
+   function. */
 #undef HAVE_SYSINFO
 
-/* Define to 1 if you have the `syslog' function. */
+/* 
+   Define to 1 if you have the `syslog'
+   function. */
 #undef HAVE_SYSLOG
 
-/* Define to 1 if you have the <syslog.h> header file. */
+/* 
+   Define to 1 if you have the <syslog.h>
+   header file. */
 #undef HAVE_SYSLOG_H
 
-/* Define to 1 if you have the <sys/stat.h> header file. */
+/* 
+   Define to 1 if you have the <sys/stat.h>
+   header file. */
 #undef HAVE_SYS_STAT_H
 
-/* Define to 1 if you have the <sys/systeminfo.h> header file. */
+/* 
+   Define to 1 if you have the <sys/systeminfo.h>
+   header file. */
 #undef HAVE_SYS_SYSTEMINFO_H
 
-/* Define to 1 if you have the <sys/time.h> header file. */
+/* 
+   Define to 1 if you have the <sys/time.h>
+   header file. */
 #undef HAVE_SYS_TIME_H
 
-/* Define to 1 if you have the <sys/types.h> header file. */
+/* 
+   Define to 1 if you have the <sys/types.h>
+   header file. */
 #undef HAVE_SYS_TYPES_H
 
-/* Define to 1 if you have <sys/wait.h> that is POSIX.1 compatible. */
+/* 
+   Define to 1 if you have <sys/wait.h> that
+   is POSIX.1 compatible. */
 #undef HAVE_SYS_WAIT_H
 
-/* Define to 1 if you have the <unistd.h> header file. */
+/* 
+   Define to 1 if you have the <unistd.h>
+   header file. */
 #undef HAVE_UNISTD_H
 
-/* Define to 1 if you have the `unsetenv' function. */
+/* 
+   Define to 1 if you have the `unsetenv'
+   function. */
 #undef HAVE_UNSETENV
 
-/* Define to 1 if you have the `va_end' function. */
+/* 
+   Define to 1 if you have the `va_end'
+   function. */
 #undef HAVE_VA_END
 
-/* Define to 1 if you have the `va_start' function. */
+/* 
+   Define to 1 if you have the `va_start'
+   function. */
 #undef HAVE_VA_START
 
-/* Define to 1 if you have the `vfork' function. */
+/* 
+   Define to 1 if you have the `vfork'
+   function. */
 #undef HAVE_VFORK
 
-/* Define to 1 if you have the <vfork.h> header file. */
+/* 
+   Define to 1 if you have the <vfork.h>
+   header file. */
 #undef HAVE_VFORK_H
 
-/* Define to 1 if you have the `vprintf' function. */
+/* 
+   Define to 1 if you have the `vprintf'
+   function. */
 #undef HAVE_VPRINTF
 
-/* Define to 1 if you have the `vsnprintf' function. */
+/* 
+   Define to 1 if you have the `vsnprintf'
+   function. */
 #undef HAVE_VSNPRINTF
 
-/* Define to 1 if `fork' works. */
+/* 
+   Define to 1 if `fork' works. */
 #undef HAVE_WORKING_FORK
 
-/* Define to 1 if `vfork' works. */
+/* 
+   Define to 1 if `vfork' works. */
 #undef HAVE_WORKING_VFORK
 
-/* system host */
+/* 
+   system host */
 #undef HOST
 
-/* system host os */
+/* 
+   system host os */
 #undef HOSTOS
 
-/* Define to 1 if `lstat' dereferences a symlink specified with a trailing
-   slash. */
+/* 
+   Define to 1 if `lstat' dereferences a symlink
+   specified with a trailing slash. */
 #undef LSTAT_FOLLOWS_SLASHED_SYMLINK
 
-/* md5 crypt functions required */
+/* 
+   md5 crypt functions required */
 #undef MD5_CRYPT
 
-/* NetBSD system */
+/* 
+   NetBSD system */
 #undef NETBSDHOST
 
-/* Define to the address where bug reports for this package should be sent. */
+/* 
+   Define to the address where bug reports for
+   this package should be sent. */
 #undef PACKAGE_BUGREPORT
 
-/* Define to the full name of this package. */
+/* 
+   Define to the full name of this package.
+   */
 #undef PACKAGE_NAME
 
-/* Define to the full name and version of this package. */
+/* 
+   Define to the full name and version of
+   this package. */
 #undef PACKAGE_STRING
 
-/* Define to the one symbol short name of this package. */
+/* 
+   Define to the one symbol short name of
+   this package. */
 #undef PACKAGE_TARNAME
 
-/* Define to the version of this package. */
+/* 
+   Define to the version of this package. */
 #undef PACKAGE_VERSION
 
-/* Define to 1 if you have the ANSI C header files. */
+/* 
+   Define to 1 if you have the ANSI
+   C header files. */
 #undef STDC_HEADERS
 
-/* Define to 1 if you can safely include both <sys/time.h> and <time.h>. */
+/* 
+   Define to 1 if you can safely include
+   both <sys/time.h> and <time.h>. */
 #undef TIME_WITH_SYS_TIME
 
-/* Define to empty if `const' does not conform to ANSI C. */
+/* 
+   Define to empty if `const' does not conform
+   to ANSI C. */
 #undef const
 
-/* Define to `int' if <sys/types.h> doesn't define. */
+/* 
+   Define to `int' if <sys/types.h> doesn't define. */
 #undef gid_t
 
-/* Define to rpl_malloc if the replacement function should be used. */
+/* 
+   Define to rpl_malloc if the replacement function should
+   be used. */
 #undef malloc
 
-/* Define to `int' if <sys/types.h> does not define. */
+/* 
+   Define to `int' if <sys/types.h> does not define.
+   */
 #undef pid_t
 
-/* Define to rpl_realloc if the replacement function should be used. */
+/* 
+   Define to rpl_realloc if the replacement function should
+   be used. */
 #undef realloc
 
-/* Define to `unsigned' if <sys/types.h> does not define. */
+/* 
+   Define to `unsigned' if <sys/types.h> does not define.
+   */
 #undef size_t
 
-/* Define to `int' if <sys/types.h> doesn't define. */
+/* 
+   Define to `int' if <sys/types.h> doesn't define. */
 #undef uid_t
 
-/* Define as `fork' if `vfork' does not work. */
+/* 
+   Define as `fork' if `vfork' does not work.
+   */
 #undef vfork
