--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,6 @@
 # ----------------------------------------------------------------------
-# (GPL) 2001 Belgium                               http://staf.patat.org
-# Staf Wagemakers	                                  staf@patat.org
+# (GPL) 2001 Belgium                            http://www.wagemakers.be
+# Staf Wagemakers	                              staf@wagemakers.be
 # ----------------------------------------------------------------------
 
 ARG=-D_@ARG@ -D@NEED_COMPAT_H@
