--- a/createconfig.sh.in
+++ b/createconfig.sh.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 # creates cgipaf.conf			        staf wagemakers
-#                                               staf@patat.org
-#                                               http://staf.patat.org
+#                                               staf@wagemakers.be
+#                                               http://www.wagemakers.be
 
 prefix="@prefix@"
 exec_prefix="@exec_prefix@"
