--- a/configure.in
+++ b/configure.in
@@ -7,6 +7,10 @@ AC_CONFIG_HEADER(config.h)
 AC_SUBST(ARG)
 AC_SUBST(NEED_COMPAT_H)
 
+dnl
+dnl OS Checks
+dnl
+
 AC_CANONICAL_SYSTEM
 
 AC_MSG_CHECKING(Is your system compatible with CGIpaf?);
@@ -83,14 +87,50 @@ if test "$SOLARISHOST" = "1";then
 fi
 
 AC_MSG_RESULT($RESULT_MSG)
-
-
-
 AC_DEFINE_UNQUOTED(HOST,"$host",system host)
 AC_DEFINE_UNQUOTED(HOSTOS,"$host_os",system host os)
 AC_DEFINE_UNQUOTED(HOSTREL,"$HOSTREL",system os release)
 
 NEED_COMPAT_H="COMPAT"
+
+dnl
+dnl looking for the systems lock directory
+dnl
+
+AC_MSG_CHECKING(verifing the lock directory)
+
+if test -d /var/lock; then
+
+   LOCKDIR=/var/lock
+
+else
+
+   if test -d /var/spool/locks; then
+   
+	LOCKDIR=/var/spool/locks
+	
+
+   else 
+
+   	if test -d /var/spool/lock; then
+	
+      		LOCKDIR=/var/spool/lock
+
+	   else
+            
+		AC_MSG_WARN("Can't find lock directory using default /var/lock")
+   		LOCKDIR=/var/lock
+
+	fi
+
+    fi
+
+fi
+
+AC_MSG_RESULT($LOCKDIR);
+
+AC_DEFINE_UNQUOTED(LOCKDIR,"$LOCKDIR",lock directory)
+AC_DEFINE_UNQUOTED(TMPLOCK,"${LOCKDIR}/cgipaf",lock file)
 
 AC_SUBST(OBJS)
 AC_SUBST(CHPASSOBJS)
@@ -100,11 +140,16 @@ PRESET_CFLAGS="$CFLAGS"
 
 OBJS="xstring.o ccgi.o configfile.o showmsg.o ephp.o accessdb.o createcookie.o searchdomain.o xmalloc.o out_of_memory.o run_cmd.o acl.o write_log.o cgipaf_func.o"
 
+dnl
 dnl Checks for programs.
+dnl
+
 AC_PROG_CC
 AC_PROG_MAKE_SET
 
+dnl
 dnl extra configure arguments
+dnl
 
 AC_ARG_ENABLE(pam,[  --enable-pam            Enable pam support (default) ],
    [ if test "$enableval" != "no"; then
@@ -164,10 +209,13 @@ if test "$ARG" != "WITHPAM"; then
 
    HAVE_CHPASS_CRYPT="CHPASS_CRYPT"
 
+dnl
 dnl  most un*ces have crypt defined in unistd.h
 dnl   if test "$HAVE_CRYPT_H" != "1"; then
 dnl      AC_MSG_ERROR(pam support is disabled and crypt.h not found)
 dnl   fi
+dnl
+
    OBJS="$OBJS pass.o salt.o"
    
    if test "$enable_md5crypt" != "no"; then
