--- a/install.sh.in
+++ b/install.sh.in
@@ -48,6 +48,13 @@ localstatedir="@localstatedir@"
 srcdir="@srcdir@"
 datadir="@datadir@"
 
+if [ -z $datadir ]; then
+
+        datadir="@datarootdir@"
+
+fi
+
+
 
 if [ ! -x ./passwd.cgi ]; then
    echo "type make to compile cgipaf"
