BUGFIX: corrected md5 issue on BIG ENDIAN systems

--- a/config.h.in
+++ b/config.h.in
@@ -256,6 +256,9 @@
 /* Define to 1 if `vfork' works. */
 #undef HAVE_WORKING_VFORK
 
+/* big endian */
+#undef HIGHFIRST
+
 /* system host */
 #undef HOST
 
